--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css">
-    <link rel="stylesheet" href="/style/style.min.css">
+    <link rel="stylesheet" href="/recipeBox/style/style.min.css">
   </head>
   <body>
     <div class="container"></div>
